installed MongoDB driver

--- a/Project.Gtfs.Net/Project.GtfsNet.Demo/packages.config
+++ b/Project.Gtfs.Net/Project.GtfsNet.Demo/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="CsvHelper" version="2.13.2.0" targetFramework="net452" />
   <package id="GTFS" version="0.0.3.57" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.1.1" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.1.1" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.1.1" targetFramework="net452" />
 </packages>
